--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,8 @@ p{font-family: 'Ubuntu';font-weight: bold;}
   width: 60%;
   transform: rotate(25deg);
   position:absolute;
+  margin-left: 5%;
+  margin-top:10%;
 }
 
 .heading{
